--- a/msp.ipynb
+++ b/msp.ipynb
@@ -154,7 +154,7 @@
     "H: pv = pm \\\n",
     "H: pv = po \\\n",
     "H: pm = po \\\n",
-    "kde pv = pravdepodobnost u väčších miest, pm = pravdepodobnosť u menších miest, po = pravdepodobnosť v obciach. Ak sú všetky tri hypotézy pravdivé, tak percentuálne zastúpenie je rovnaké pre všetky kategorie.\n",
+    "kde pv = pravdepodobnost u väčších miest, pm = pravdepodobnosť u menších miest, po = pravdepodobnosť v obciach. Ak sú všetky tri hypotézy pravdivé, tak percentuálne zastúpenie je rovnaké pre všetky kategorie. Stačí aby jedna hypoteza neplatila a už nebude platiť rovnosť všetkých troch.\n",
     "\n",
     "d) U větších měst, menších měst a obcí (3. průzkumy) je stejné procentuální zastoupení obyvatel, co preferují zimní čas. \\\n",
     "e) U větších měst, menších měst a obcí (3. průzkumy) je stejné procentuální zastoupení nerozhodnutelných obyvatel. \\"
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -171,27 +171,15 @@
      "text": [
       "Doplnok <-u_1-alpha/2,u_1-alpha/2> [-0.959963984540054, 1.959963984540054]\n",
       "D)\n",
-      "Väčšie mesta = menšie mestá: True pre t = -0.056998710810539296\n",
-      "Väčšie mesta = obce: True pre t = -0.06043624141168527\n",
-      "Menšie mestá = obce: True pre t = -0.0032021280093444847\n",
-      "Hypotézu nezamietame\n",
+      "Väčšie mesta = menšie mestá: False pre t = -4.005690655150091\n",
+      "Väčšie mesta = obce: False pre t = -3.3855167058200655\n",
+      "Menšie mestá = obce: True pre t = -0.15183041678767845\n",
+      "Hypotézu zamietame\n",
       "E)\n",
-      "Väčšie mesta = menšie mestá: True pre t = 0.013961501450230503\n",
-      "Väčšie mesta = obce: True pre t = 0.02171127787518878\n",
-      "Menšie mestá = obce: True pre t = 0.009363809580875857\n",
-      "Hypotézu nezamietame\n",
-      "5.991464547107979\n",
-      "Chi2: 12.661948651569508\n",
-      "Hypotezu zamietame: True\n",
-      "Chi2: 20.688664757394136\n",
-      "Hypotezu zamietame: True\n",
-      "            vacsie mesta  mensie mesta  obce   sum\n",
-      "zimni                834           559   300  1693\n",
-      "letni                636           363   210  1209\n",
-      "striedanie           435           202   108   745\n",
-      "jedno                337           144    57   538\n",
-      "total               2242          1268   675  4185\n",
-      "BinomTestResult(k=834, n=2242, alternative='two-sided', proportion_estimate=0.3719892952720785, pvalue=0.0016777807574738352) BinomTestResult(k=559, n=1268, alternative='two-sided', proportion_estimate=0.44085173501577285, pvalue=0.009202363386745011) BinomTestResult(k=300, n=675, alternative='two-sided', proportion_estimate=0.4444444444444444, pvalue=0.03761315312668648)\n"
+      "Väčšie mesta = menšie mestá: False pre t = 3.0411457374869695\n",
+      "Väčšie mesta = obce: False pre t = 4.389390041775626\n",
+      "Menšie mestá = obce: False pre t = 2.006875936850768\n",
+      "Hypotézu zamietame\n"
      ]
     }
    ],
@@ -210,9 +198,8 @@
     "    y = df2.loc[row]\n",
     "    n = df1.loc['total']\n",
     "    m = df2.loc['total']\n",
-    "\n",
     "    f = (x+y)/(n+m)\n",
-    "    t = ((x/n)-(y/m))/(math.sqrt(f*(1-f))) * math.sqrt(((x*y)/(n*m)))\n",
+    "    t = math.sqrt((n*m)/(n+m)) * ((x/n)-(y/m))/math.sqrt(f*(1-f))\n",
     "\n",
     "    print(f'{hypothesis}: {t >= doplnok[0] and t <= doplnok[1]} pre t = {t}')\n",
     "    return t\n",
@@ -221,7 +208,7 @@
     "doplnok = [1-u, u]    \n",
     "\n",
     "print('Doplnok <-u_1-alpha/2,u_1-alpha/2>', doplnok)\n",
-    "print('D)')\n",
+    "print('D) U větších měst, menších měst a obcí (3. průzkumy) je stejné procentuální zastoupení obyvatel, co preferují zimní čas.')\n",
     "H_vm = test_bin(df['vacsie mesta'], df['mensie mesta'],'zimni', doplnok,'Väčšie mesta = menšie mestá' )\n",
     "H_vo = test_bin(df['vacsie mesta'], df['obce'],'zimni', doplnok,'Väčšie mesta = obce' )\n",
     "H_mo = test_bin(df['mensie mesta'], df['obce'],'zimni', doplnok,'Menšie mestá = obce' )\n",
@@ -230,134 +217,68 @@
     "    H_mo >= doplnok[0] and H_mo <= doplnok[1]) else 'Hypotézu zamietame'\n",
     "print(H_D)\n",
     "\n",
-    "print('E)')\n",
+    "print('E) U větších měst, menších měst a obcí (3. průzkumy) je stejné procentuální zastoupení nerozhodnutelných obyvatel.')\n",
     "H_vm = test_bin(df['vacsie mesta'], df['mensie mesta'],'jedno', doplnok,'Väčšie mesta = menšie mestá' )\n",
     "H_vo = test_bin(df['vacsie mesta'], df['obce'],'jedno', doplnok,'Väčšie mesta = obce' )\n",
     "H_mo = test_bin(df['mensie mesta'], df['obce'],'jedno', doplnok,'Menšie mestá = obce' )\n",
     "H_E = 'Hypotézu nezamietame' if (H_vm >= doplnok[0] and H_vm <= doplnok[1] and \n",
     "    H_vo >= doplnok[0] and H_vo <= doplnok[1] and \n",
     "    H_mo >= doplnok[0] and H_mo <= doplnok[1]) else 'Hypotézu zamietame'\n",
-    "print(H_E)\n",
-    "#### CHI SQUARE\n",
-    "chi_square_alpha = sp.chi2.ppf(1-alpha,k-1)\n",
-    "print(chi_square_alpha)\n",
-    "df2['sum'] = df2.sum(axis=1)\n",
-    "H_D = test_dobrej_zhody(df2, 'zimni')\n",
-    "print(f'Chi2: {H_D }')\n",
-    "print(f'Hypotezu zamietame: {H_D >chi_square_alpha}')\n",
-    "\n",
-    "H_E = test_dobrej_zhody(df2, 'jedno')\n",
-    "print(f'Chi2: {H_E }')\n",
-    "print(f'Hypotezu zamietame: {H_E >chi_square_alpha}')\n",
-    "\n",
-    "print(df2)\n",
-    "\n",
-    "# bin test\n",
-    "a = sp.binomtest(df2.loc['zimni']['vacsie mesta'], df2.loc['total']['vacsie mesta'], df2.loc['zimni']['sum']/df2.loc['total']['sum'])\n",
-    "b = sp.binomtest(df2.loc['zimni']['mensie mesta'], df2.loc['total']['mensie mesta'], df2.loc['zimni']['sum']/df2.loc['total']['sum'])\n",
-    "c = sp.binomtest(df2.loc['zimni']['obce'], df2.loc['total']['obce'], df2.loc['zimni']['sum']/df2.loc['total']['sum'])\n",
-    "\n",
-    "print(a,b,c)"
+    "print(H_E)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "### Párový test\n",
     "f) Na základě odpovědí z okolí studenta zkuste určit z dat, zda student prováděl výzkum ve větším městě, menším městě nebo\n",
-    "v obci. Porovnejte výsledek se skutečností a okomentujte "
+    "v obci. Porovnejte výsledek se skutečností a okomentujte \\\n",
+    "\n",
+    "Na nasledujúcu časť je použitý studentov párový test."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vacsie mesto?\n",
       "Doplnok: [-1.9609928077565326, 1.9609928077565326], t: 4.944739448894932\n",
-      "False\n",
-      "Mensie mesto?\n",
+      "Okolí nie je Vacsie mesto\n",
       "Doplnok: [-1.96174522240402, 1.96174522240402], t: 3.226631514524902\n",
-      "False\n",
-      "Obec?\n",
+      "Okolí nie je Mensie mesto\n",
       "Doplnok: [-1.9631749170926294, 1.9631749170926294], t: 2.835176276918267\n",
-      "False\n",
-      "Doplnok kritickeho oboru: [0, 7.814727903251179]\n",
-      "A) V městech, obcích a v okolí studenta (8. průzkumů) je stejné procentuální zastoupení obyvatel, co preferují zimní čas\n",
-      "zimni         0.371989\n",
-      "letni         0.283675\n",
-      "striedanie    0.194023\n",
-      "jedno         0.150312\n",
-      "total         1.000000\n",
-      "Name: vacsie mesta, dtype: float64\n",
-      "21.545258133922857\n",
-      "zimni         0.440852\n",
-      "letni         0.286278\n",
-      "striedanie    0.159306\n",
-      "jedno         0.113565\n",
-      "total         1.000000\n",
-      "Name: mensie mesta, dtype: float64\n",
-      "28.998487965551185\n",
-      "zimni         0.444444\n",
-      "letni         0.311111\n",
-      "striedanie    0.160000\n",
-      "jedno         0.084444\n",
-      "total         1.000000\n",
-      "Name: obce, dtype: float64\n",
-      "27.263186375028475\n",
-      "zimni         0.136364\n",
-      "letni         0.454545\n",
-      "striedanie    0.303030\n",
-      "jedno         0.106061\n",
-      "total         1.000000\n",
-      "Name: Okolí, dtype: float64\n"
+      "Okolí nie je Obec\n"
      ]
     }
    ],
    "source": [
     "df_a = df[['vacsie mesta','mensie mesta','obce', 'Okolí']].copy()\n",
     "df_a['sum'] = df_a.sum(axis=1)\n",
-    "def t_test(a,b):\n",
+    "def t_test(a,b, output):\n",
     "    n = (a + b).loc['total']\n",
     "    a, b = a[:-1], b[:-1]\n",
     "    (t, p_val) = sp.ttest_rel(a, b, axis=0, alternative='two-sided')\n",
     "    doplnok = [-sp.t.ppf(1-alpha/2, n-1),sp.t.ppf(1-alpha/2, n-1)]\n",
     "    print(f'Doplnok: {doplnok}, t: {t}')\n",
-    "    print(t >= doplnok[0] and t <= doplnok[1])\n",
+    "    print(f'Okolí = {output}') if t >= doplnok[0] and t <= doplnok[1] else print(f'Okolí nie je {output}')\n",
+    "    return t, p_val\n",
     "\n",
-    "print('Vacsie mesto?')\n",
-    "t_test(df_a['vacsie mesta'], df_a['Okolí'])\n",
-    "print('Mensie mesto?')\n",
-    "t_test(df_a['mensie mesta'], df_a['Okolí'])\n",
-    "print('Obec?')\n",
-    "t_test(df_a['obce'], df_a['Okolí'])\n",
-    "\n",
-    "\n",
-    "#moznost dva\n",
-    "k = 4\n",
-    "\n",
-    "chi_square_alpha = sp.chi2.ppf(1-alpha,k-1)\n",
-    "\n",
-    "print(f'Doplnok kritickeho oboru: {[0,chi_square_alpha]}')\n",
-    "#H_A = test_dobrej_zhody( df_a, 'zimni')\n",
-    "def chi2(df, row):\n",
-    "    p_row = df[row]/df.loc['total'][row]\n",
-    "    expected = p_row*df.loc['total']['Okolí']\n",
-    "    print(p_row)\n",
-    "    observed = df['Okolí']\n",
-    "    expected, observed = expected[:-1], observed[:-1] # remove sum column\n",
-    "    (chis,pval) = sp.chisquare(observed, expected) # vypocet chi**2\n",
-    "    return chis\n",
-    "\n",
-    "print(chi2(df_a, 'vacsie mesta'))\n",
-    "print(chi2(df_a, 'mensie mesta'))\n",
-    "print(chi2(df_a, 'obce'))\n",
-    "print(df_a['Okolí']/df_a.loc['total']['Okolí'])\n"
+    "vacsie = t_test(df_a['vacsie mesta'], df_a['Okolí'], 'Vacsie mesto')\n",
+    "mensie = t_test(df_a['mensie mesta'], df_a['Okolí'], 'Mensie mesto')\n",
+    "obec = t_test(df_a['obce'], df_a['Okolí'], 'Obec')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Záver\n",
+    "Okolí sa nepodobá podla párového testu ani na väčšie, menšie mesto ani na obec. Ale najbližšie má k obci. Meranie bolo robené v menšom meste, ale vzhľadom na to, že väčšina opýtaných ľudí preferovala letný čas alebo jeho striedanie, a najmenej respondendov preferovalo zimný čas, ttk sa tieto dáta značne líšia od pôvodných, kde ľudia preferovali najviac zimný čas. "
    ]
   },
   {
