--- a/msp.ipynb
+++ b/msp.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 2,
    "metadata": {
     "id": "7lRu-00_Wqn2"
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -170,12 +170,12 @@
      "output_type": "stream",
      "text": [
       "Doplnok <-u_1-alpha/2,u_1-alpha/2> [-0.959963984540054, 1.959963984540054]\n",
-      "D)\n",
+      "D) U větších měst, menších měst a obcí (3. průzkumy) je stejné procentuální zastoupení obyvatel, co preferují zimní čas.\n",
       "Väčšie mesta = menšie mestá: False pre t = -4.005690655150091\n",
       "Väčšie mesta = obce: False pre t = -3.3855167058200655\n",
       "Menšie mestá = obce: True pre t = -0.15183041678767845\n",
       "Hypotézu zamietame\n",
-      "E)\n",
+      "E) U větších měst, menších měst a obcí (3. průzkumy) je stejné procentuální zastoupení nerozhodnutelných obyvatel.\n",
       "Väčšie mesta = menšie mestá: False pre t = 3.0411457374869695\n",
       "Väčšie mesta = obce: False pre t = 4.389390041775626\n",
       "Menšie mestá = obce: False pre t = 2.006875936850768\n",
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "kkNLTn8aVPIi"
    },
@@ -425,7 +425,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.967\n",
       "Method:                 Least Squares   F-statistic:                     411.6\n",
       "Date:                Thu, 01 Dec 2022   Prob (F-statistic):           3.04e-47\n",
-      "Time:                        18:42:44   Log-Likelihood:                -373.91\n",
+      "Time:                        22:29:28   Log-Likelihood:                -373.91\n",
       "No. Observations:                  70   AIC:                             759.8\n",
       "Df Residuals:                      64   BIC:                             773.3\n",
       "Df Model:                           5                                         \n",
@@ -454,7 +454,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_183478/3397836032.py:40: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "/tmp/ipykernel_208818/3397836032.py:40: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  fig.show()\n"
      ]
     },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.968\n",
       "Method:                 Least Squares   F-statistic:                     521.9\n",
       "Date:                Thu, 01 Dec 2022   Prob (F-statistic):           1.29e-48\n",
-      "Time:                        18:42:44   Log-Likelihood:                -373.95\n",
+      "Time:                        22:29:29   Log-Likelihood:                -373.95\n",
       "No. Observations:                  70   AIC:                             757.9\n",
       "Df Residuals:                      65   BIC:                             769.1\n",
       "Df Model:                           4                                         \n",
@@ -525,7 +525,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_183478/3397836032.py:40: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "/tmp/ipykernel_208818/3397836032.py:40: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  fig.show()\n"
      ]
     },
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.967\n",
       "Method:                 Least Squares   F-statistic:                     678.6\n",
       "Date:                Thu, 01 Dec 2022   Prob (F-statistic):           1.62e-49\n",
-      "Time:                        18:42:44   Log-Likelihood:                -375.33\n",
+      "Time:                        22:29:30   Log-Likelihood:                -375.33\n",
       "No. Observations:                  70   AIC:                             758.7\n",
       "Df Residuals:                      66   BIC:                             767.6\n",
       "Df Model:                           3                                         \n",
@@ -595,7 +595,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_183478/3397836032.py:40: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "/tmp/ipykernel_208818/3397836032.py:40: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  fig.show()\n"
      ]
     },
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.916\n",
       "Method:                 Least Squares   F-statistic:                     379.3\n",
       "Date:                Thu, 01 Dec 2022   Prob (F-statistic):           2.90e-37\n",
-      "Time:                        18:42:45   Log-Likelihood:                -408.56\n",
+      "Time:                        22:29:30   Log-Likelihood:                -408.56\n",
       "No. Observations:                  70   AIC:                             823.1\n",
       "Df Residuals:                      67   BIC:                             829.9\n",
       "Df Model:                           2                                         \n",
@@ -664,7 +664,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_183478/3397836032.py:40: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "/tmp/ipykernel_208818/3397836032.py:40: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  fig.show()\n"
      ]
     },
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.891\n",
       "Method:                 Least Squares   F-statistic:                     564.3\n",
       "Date:                Thu, 01 Dec 2022   Prob (F-statistic):           1.21e-34\n",
-      "Time:                        18:42:45   Log-Likelihood:                -418.41\n",
+      "Time:                        22:29:31   Log-Likelihood:                -418.41\n",
       "No. Observations:                  70   AIC:                             840.8\n",
       "Df Residuals:                      68   BIC:                             845.3\n",
       "Df Model:                           1                                         \n",
@@ -732,7 +732,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_183478/3397836032.py:40: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "/tmp/ipykernel_208818/3397836032.py:40: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  fig.show()\n"
      ]
     },
@@ -761,14 +761,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_183478/3397836032.py:40: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "/tmp/ipykernel_208818/3397836032.py:40: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  fig.show()\n"
      ]
     },
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1000,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.966\n",
       "Method:                 Least Squares   F-statistic:                     979.3\n",
       "Date:                Thu, 01 Dec 2022   Prob (F-statistic):           2.53e-50\n",
-      "Time:                        18:44:44   Log-Likelihood:                -377.14\n",
+      "Time:                        22:29:32   Log-Likelihood:                -377.14\n",
       "No. Observations:                  70   AIC:                             760.3\n",
       "Df Residuals:                      67   BIC:                             767.0\n",
       "Df Model:                           2                                         \n",
@@ -1026,7 +1026,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_183478/3397836032.py:40: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "/tmp/ipykernel_208818/3397836032.py:40: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  fig.show()\n"
      ]
     },
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1143,36 +1143,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.112101654189658 14.182435348708022 2.1278657672850407\n",
-      "Testovacie kriterium z:53.59321992523344\n",
-      "Doplnok kritickeho oboru: [0, 3.1316719710508436]\n",
+      "testovacie kriterium: 54.92253822512098\n",
+      "Doplnok kritickeho oboru: <0, 3.1316719710508436>\n",
+      "P hodnota:7.570791593775364e-15\n",
       "H zamietame: True\n"
      ]
     }
    ],
    "source": [
-    "F = np.column_stack((Y, X**2))\n",
-    "F = sm.add_constant(F)\n",
-    "H = np.dot(np.transpose(F),F)\n",
-    "\n",
-    "b1 = submodel.params[0]\n",
-    "b2 = submodel.params[1]\n",
-    "b3 = submodel.params[2]\n",
-    "print(b1,b2,b3)\n",
-    "z = ((H[0][0]*(b1**2))+H[0][1]*H[1][0]*(b1*b2)+H[1][1]*(b2**2))/(2*rozptyl) # n(b1**2)+2(sum y_n**2)b1*b2+(sum Yn**2)*(b2**2)*(1/2s**2)\n",
-    "\n",
-    "#z = (submodel.nobs*(b1)**2)+2*H[0][1]*(b1*b3)+(H[1][0]**2)*(b3**2)/(2*rozptyl)\n",
     "F = sp.f.ppf(1-alpha, submodel.df_model, submodel.nobs-2)\n",
-    "print(f'Testovacie kriterium z:{z}')\n",
-    "print(f'Doplnok kritickeho oboru: {[0, F]}')\n",
-    "print(f'H zamietame: {z>F or z < 0}')"
+    "\n",
+    "f = submodel.f_test(\"const=x1=0\")\n",
+    "\n",
+    "F = sp.f.ppf(1-alpha, submodel.df_model, submodel.nobs-2)\n",
+    "print(f'testovacie kriterium: {f.fvalue}')\n",
+    "print(f'Doplnok kritickeho oboru: <0, {F}>')\n",
+    "print(f'P hodnota: {f.pvalue}')\n",
+    "print(f'H zamietame: {f.pvalue < alpha}')"
    ]
   },
   {
@@ -1185,49 +1179,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testovacie kriterium z:-44380289397.171196\n",
-      "Doplnok kritickeho oboru: [-1.9960083534755055, 1.9960083534755055]\n",
-      "H zamietame: True\n",
-      "Testovacie kriterium z:3416702152941340.5\n",
-      "Doplnok kritickeho oboru: [-1.9960083534755055, 1.9960083534755055]\n",
-      "H zamietame: True\n",
-      "Testovacie kriterium z:-13172.40916760528\n",
-      "Doplnok kritickeho oboru: [0, 3.1316719710508436]\n",
-      "H zamietame: True\n"
+      "testovacie kriterium: 0.027322933652309624\n",
+      "Doplnok kritickeho oboru: <0, 3.1316719710508436>\n",
+      "P hodnota: 0.869208350333925\n",
+      "H zamietame: False\n"
      ]
     }
    ],
    "source": [
-    "s = math.sqrt(rozptyl)\n",
-    "det = np.linalg.det(H)\n",
-    "H_inverse = np.linalg.inv(H)\n",
-    "v00 = H_inverse[0][0]/det\n",
-    "t = (b1-b3)/(s*v00)\n",
-    "T_alpha = sp.t.ppf(1-alpha/2, submodel.df_resid)\n",
-    "print(f'Testovacie kriterium z:{t}')\n",
-    "print(f'Doplnok kritickeho oboru: {[-T_alpha, T_alpha]}')\n",
-    "print(f'H zamietame: {t < -T_alpha or t > T_alpha}')\n",
-    "\n",
-    "# druha H: B3 = B1\n",
-    "v22 = H_inverse[2][2]/det\n",
-    "t = (b3-b1)/(s*v22)\n",
-    "print(f'Testovacie kriterium z:{t}')\n",
-    "print(f'Doplnok kritickeho oboru: {[-T_alpha, T_alpha]}')\n",
-    "print(f'H zamietame: {t < -T_alpha or t > T_alpha}')\n",
-    "\n",
-    "# ALEBO tretia  H: (B1, B3) = (B3,B1)\n",
-    "z = ((H[0][0]*((b1-b3)**2))+H[0][2]*H[1][2]*(b1*b3)+H[2][2]*((b3*b1)**2))/(2*rozptyl)\n",
+    "f = submodel.f_test(\"const=x2\")\n",
     "F = sp.f.ppf(1-alpha, submodel.df_model, submodel.nobs-2)\n",
-    "print(f'Testovacie kriterium z:{z}')\n",
-    "print(f'Doplnok kritickeho oboru: {[0, F]}')\n",
-    "print(f'H zamietame: {z>F or z < 0}')"
+    "print(f'testovacie kriterium: {f.fvalue}')\n",
+    "print(f'Doplnok kritickeho oboru: <0, {F}>')\n",
+    "print(f'P hodnota: {f.pvalue}')\n",
+    "print(f'H zamietame: {f.pvalue < alpha}')"
    ]
   }
  ],
